[tool.poetry]
name = "channel-box"
version = "1.1.0"
description = ""
authors = ["Sobolev Andrey <email.asobolev@gmail.com>"]
readme = "README.md"
packages = [{include = "channel_box"}]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "0.4.10"
simple-print = "2.2.6"
starlette = "0.37.2"
websockets = "12.0"
uvicorn = "0.30.1"
pytest = "8.2.2"
pytest-asyncio = "0.21.2"
jninja2 = "3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"