[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "channel-box"
version = "1.1.5"
description = "ChannelBox is a package for FastAPI & Starlette that allows you to make named websocket channels."
readme = "README.md"
authors = [
    { name = "Sobolev Andrey", email = "email.asobolev@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.37.2",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/Sobolev5/channel-box"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "0.4.10"
simple-print = "2.2.6"
starlette = "0.37.2"
websockets = "12.0"
uvicorn = "0.30.1"
pytest = "8.2.2"
pytest-asyncio = "0.21.2"
Jinja2 = "3.1.6"
