[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "channel-box"
version = "1.2.0"
description = "ChannelBox is a package for FastAPI & Starlette that allows you to make named websocket channels."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Sobolev Andrey", email = "email.asobolev@gmail.com" }
]

dependencies = [
    "starlette>=0.37.2",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/Sobolev5/channel-box"
