[tool.poetry]
name = "channel-box-example"
version = "0.1.0"
description = "Example project demonstrating ChannelBox usage"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Install ChannelBox from the repository root (editable mode)
channel-box = { path = "..", develop = true }

starlette = "0.37.2"
websockets = "12.0"
uvicorn = "0.30.1"
jinja2 = "3.1.6"
simple-print = "2.2.6"

pytest = "8.2.2"
pytest-asyncio = "0.21.2"
ruff = "0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
